--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,6 +1,8 @@
+{% load static %}
 <!DOCTYPTE html>
 <html>
     <head>
+        <link rel="stylesheet" href="{% static 'blog/style.css' %}">
         <title>Home</title>
     </head>
     <body>
