update: change css file name

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -2,7 +2,7 @@
 <!DOCTYPTE html>
 <html>
     <head>
-        <link rel="stylesheet" href="{% static 'blog/style.css' %}">
+        <link rel="stylesheet" href="{% static 'blog/styles.css' %}">
         <title>Home</title>
     </head>
     <body>
