fix: typo doctype

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,5 +1,5 @@
 {% load static %}
-<!DOCTYPTE html>
+<!DOCTYPE html>
 <html>
     <head>
         <link rel="stylesheet" href="{% static 'blog/styles.css' %}">
