update: use container

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -41,7 +41,10 @@
         </form>
     </div>
     </nav>
-        <h1>Hello, Django MU</h1>
-        <p>I love to learn Django Framework</p>
+
+        <div class="container">
+            <h1>Hello, Django MU</h1>
+            <p>I love to learn Django Framework</p>
+        </div>
     </body>
 </html>
