add: card to home

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -45,6 +45,26 @@
         <div class="container">
             <h1>Hello, Django MU</h1>
             <p>I love to learn Django Framework</p>
+            <div class="row">
+            <div class="col-sm-6">
+                <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Special title treatment</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Special title treatment</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+                </div>
+            </div>
+            </div>
         </div>
     </body>
 </html>
