--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,5 +1,9 @@
 {% extends 'blog/base.html' %}
 
+{% block title %}
+<title>Welcome to Home</title>
+{% endblock%}
+
 {% block content %}
 <div class="container">
     <h1>Hello, Django MU</h1>
