refactor: title tag

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
 
-{% block title %}
-<title>Welcome to Home</title>
+{% block title %} 
+Welcome to Home
 {% endblock%}
 
 {% block content %}
