--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -3,7 +3,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+        <title>
         {% block title %} {% endblock%}
+        </title>
     </head>
     <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
