update: use build-in template fileter

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -15,6 +15,7 @@ Welcome to Home
                 <div class="card-body">
                     <h5 class="card-title">{{ post.title }}</h5>
                     <p class="card-text text-secondary">{{ post.short_description }}</p>
+                    <p class="card-text">{{ post.date_created|date }}</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
