update: config send post_id

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -16,7 +16,7 @@ Welcome to Home
                     <h5 class="card-title">{{ post.title }}</h5>
                     <p class="card-text text-secondary">{{ post.short_description }}</p>
                     <p class="card-text">{{ post.date_created|date }}</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="/post-detail/{{ post.id }}" class="btn btn-primary">Read More.</a>
                 </div>
             </div>
         </div>
