create: contact model

--- a/blog/templates/blog/contact.html
+++ b/blog/templates/blog/contact.html
@@ -6,8 +6,10 @@ Contact Us
 
 {% block content %}
 <div class="container">
-    <div class="row">
-        <h1>Contact</h1>
+    <div class="row mt-3">
+        <div class="col-sm-6">
+            <h1>Contact</h1>
+        </div>
     </div>
 </div>
 {% endblock %}
