--- a/blog/templates/blog/forms.html
+++ b/blog/templates/blog/forms.html
@@ -9,7 +9,7 @@ Contact Form
     <div class="row mt-3">
         <div class="col-sm-6">
             <h1>Contact Us</h1>
-            <form>
+            <form method="POST" action="{% url 'contact' %}">
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
