--- a/blog/templates/blog/forms.html
+++ b/blog/templates/blog/forms.html
@@ -11,7 +11,8 @@ Contact Form
             <h1>Contact Us</h1>
             <form method="POST" action="{% url 'contact' %}">
             {% csrf_token %}
-            {{ form }}
+                {{ form.as_p }}
+                <button class="btn btn-primary">Submit</button>
             </form>
         </div>
     </div>
