update: implement media to app

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -13,6 +13,7 @@ Welcome to Home
         <div class="col-sm-4">
             <div class="card">
                 <div class="card-body">
+                    <img src="{{ post.feature_image.url }}" alt="">
                     <h5 class="card-title">{{ post.title }}</h5>
                     <p class="card-text text-secondary">{{ post.short_description }}</p>
                     <p class="card-text">{{ post.date_created|date }}</p>
