--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -36,12 +36,9 @@
             <a class="dropdown-item" href="#">Something else here</a>
             </div>
         </li>
-        <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
-        </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <form class="form-inline my-2 my-lg-0" action="{% url 'home' %}" method="GET">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
     </div>
