--- a/blog/templates/blog/sign_in.html
+++ b/blog/templates/blog/sign_in.html
@@ -5,5 +5,23 @@ Sign in
 {% endblock %}
 
 {% block content %}
-<h1>Please sign in before read</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-2">
+            <h1>Sign in</h1>
+            <form action="{% url 'sign-in' %}" method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="username">Username</label>
+                    <input type="text" class="form-control col-xl-8" name="username">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control col-xl-8" name="password">
+                </div>
+                <button type="submit" class="btn btn-primary">Sign in</button>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
