update: complete mu django course

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -22,24 +22,32 @@
         <li class="nav-item active">
             <a class="nav-link" href="{% url 'about' %}">About</a>
         </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-            Dropdown
-            </a>
-            <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
-        </li>
+        <li class="nav-item active">
+            <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+         </li>
+
+        {% if user.is_authenticated %}
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'sign-out' %}">Sign Out</a>
+            </li>
+         {% else %}
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'sign-up' %}">Sign Up</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'sign-in' %}">Sign In</a>
+            </li>
+        {% endif %}
+
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <form class="form-inline my-2 my-lg-0" action="{% url 'search' %}">
+            <input 
+                class="form-control mr-sm-2" 
+                type="search" 
+                placeholder="Search" 
+                aria-label="Search" 
+                name="q">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
     </div>
     </nav>
