--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -12,11 +12,12 @@ Welcome to Home
     {% for post in all_posts %}
         <div class="col-sm-4">
             <div class="card">
+                <img class="card-img-top" src="{{ post.feature_image.url }}" alt="{{ post.title }}">
                 <div class="card-body">
                     <h5 class="card-title">{{ post.title }}</h5>
                     <p class="card-text text-secondary">{{ post.short_description }}</p>
                     <p class="card-text">{{ post.date_created|date }}</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="{% url 'post-detail' post.id %}" class="btn btn-primary">Read More.</a>
                 </div>
             </div>
         </div>
